@@ -5,8 +5,10 @@ enabled = 1
 physical_enabled = 1
 ; set to 0: disable initialization of graphical overlay
 overlay_enabled = 1
-; set to 1 to initialize physical tracker asap (e.g. to enable oxrtk eye tracking in games without support for motion copntrollers)
+; set to 1 to initialize physical tracker asap (e.g. to avoid conflict with eye tracking in oxrtk for games without support for motion copntrollers)
 physical_early_init = 0 
+; turn in game coordinate sytem is upside down (rotate 180 degrees around the fowrard view axis) 
+upside_down = 0
 
 [tracker]
 ; supported modes: controller, yaw, srs and flypt 
